# city

./: .gitignore  FINDINGS.md  MVP.md  README.md  README2.md  presentation_notes.md  pyproject.toml  requirements.txt  schema.dbml
city/: __init__.py  __main__.py  analyse.py  bench.py  db.py  engine.py  experiment.py  multi_seed_curve.py  plot.py  primitives.py  providers.py  run_matrix.py
docs/: strategies.md
example/: config.json  experiment_local.json  experiment_minimal.json  experiment_order2.json  experiment_reasoning.json  experiment_terse.json
example/matrix/: o1_reasoning_peers.json  o1_reasoning_solo.json  o1_terse_peers.json  o1_terse_solo.json  o2_reasoning_peers.json  o2_reasoning_solo.json  o2_terse_peers.json  o2_terse_solo.json
llm/: server.py
output/anthropic/o2_reasoning_peers/: seed0.json  seed1.json  seed10.json  seed11.json  seed12.json  seed13.json  seed14.json  seed15.json  seed16.json  seed17.json  seed18.json  seed19.json  seed2.json  seed20.json  seed21.json  seed22.json  seed23.json  seed24.json  seed25.json  seed26.json  seed27.json  seed28.json  seed29.json  seed3.json  seed30.json  seed31.json  seed32.json  seed33.json  seed34.json  seed35.json  seed36.json  seed37.json  seed38.json  seed39.json  seed4.json  seed40.json  seed41.json  seed42.json  seed43.json  seed44.json  (+20 more)
output/anthropic/o2_reasoning_solo/: seed0.json  seed1.json  seed10.json  seed11.json  seed12.json  seed13.json  seed14.json  seed15.json  seed16.json  seed17.json  seed18.json  seed19.json  (+48 more)
output/graphs/: READING.md
tests/: test_engine.py  test_experiment.py  test_primitives.py  test_providers.py
(+612 files in other folders)
