[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'city'
version = '0.0.0'
description = 'A generational simulator for LLM societies'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'openai>=2.16.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.0.0',
    'pytest-cov>=4.0.0',
]

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['city']
